<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Apion Home</string>
    <string name="tittle_retry">Thử lại</string>
    <string name="tittle_cancel">Hủy</string>
    <string name="tittle_close">Đóng</string>
    <string name="tittle_exception_connect">Lỗi kết nối</string>
    <string name="message_exception_connect">Không thể kết nối internet.  Hãy kiểm tra kết nối internet hoặc WIFI</string>
    <string name="default_error">Đã có lỗi xảy ra…!</string>
    <string name="tittle_button_agree">Đông ý</string>
    <string name="tittle_button_cancel">Hủy</string>
    <string name="tittle_button_confirm">Xác nhận</string>
    <string name="hint_query">Tìm kiếm</string>
    <string name="title_search">Tìm kiếm</string>
    <string name="title_search_province">Tìm kiếm tỉnh, thành phố</string>
    <string name="title_search_district">Tìm kiếm quận, huyện, thị xã</string>
    <string name="title_search_ward">Tìm kiếm xã, phường</string>
    <string name="title_search_street">Tìm kiếm đường, phố</string>
    <string name="text_title_search">Nhập nội dung tìm kiếm</string>
    <string name="hint_city">Tỉnh, thành phố</string>
    <string name="hint_district">Quận, huyện</string>
    <string name="hint_price">Mức giá</string>
    <string name="hint_ward">Phường, xã</string>
    <string name="title_highlight">Bất động sản nổi bật</string>
    <string name="title_detail">Chi tiết</string>
    <string name="title_house_hn">Loanh quanh thủ đô Hà Nội</string>
    <string name="title_house_hcm">Vòng vòng phố thị Sài Gòn</string>
    <string name="hint_acreage">Diện tích</string>
    <string name="hint_front_width">Mặt tiền</string>
    <string name="hint_street">Đường</string>
    <string name="title_done">Xong</string>
    <string name="des_my_house">Nhà đất đang sở hữu</string>
    <string name="des_house_sold">Giao dịch đã thực hiện</string>
    <string name="error_select_ward">Vui lòng chọn quận, huyện trước</string>
    <string name="title_chat_now">Chat ngay</string>
    <string name="title_broker">Nhà môi giới đang online</string>
    <string name="title_for_sale">Nhà đất bán</string>
    <string name="title_for_rent">Nhà đất cho thuê</string>
    <string name="title_view_owner">Xem đầu chủ</string>
    <string name="title_detail_house">Chi tiết nhà ở</string>
    <string name="title_ready_for_sale">Đang bán</string>
    <string name="title_status_default">Chưa xác nhận</string>
    <string name="title_descript">Mô tả:</string>
    <string name="title_address">Địa chỉ</string>
    <string name="title_house_direction">Hướng nhà</string>
    <string name="title_new_type">Loại tin rao</string>
    <string name="title_room_count">Phòng ngủ</string>
    <string name="title_create_date">Ngày đăng</string>
    <string name="title_relate">Bất động sản tương tụ</string>
    <string name="title_community">Cộng đồng</string>
    <string name="title_your_group">Nhóm của bạn</string>
    <string name="title_view_all">Xem tất cả</string>
    <string name="text_community_empty">Tham gia các cộng đồng để làm quen và chia sẻ hành trình bán bất động sản đầy thử thách ngay thôi</string>
    <string name="title_feature_community">Bất động sản nổi bật</string>
    <string name="title_community_discover">Khám phá cộng đồng</string>
    <string name="title_owner">Chuyên viên - Đầu chủ</string>
    <string name="title_join">Tham gia</string>
    <string name="title_out">Rời khỏi</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_person">Cá nhân</string>
    <string name="hint_input_search">Nhập nội dung tìm kiếm</string>
    <string name="title_search_quickly">Tìm kiếm nhanh</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_bottom_start_2">Robo siêu kết nối môi giới \n Bất động sản</string>
    <string name="text_welcome_start">Chào mừng bạn đến với Apion Home</string>
    <string name="title_start">Bắt đầu</string>

</resources>
