<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:src="@drawable/ic_logo_apion_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageStart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/dp_24"
        android:scaleType="centerCrop"
        android:src="@drawable/im_start"
        app:layout_constraintBottom_toTopOf="@+id/layoutBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutBottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rectangle_bottom_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textWelcome"
            style="@style/TextHighlight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:gravity="center"
            android:text="@string/text_welcome_start"
            android:textAlignment="center"
            android:textColor="@color/color_second_primary"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textStart2"
            style="@style/TextHighlight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:gravity="center"
            android:text="@string/text_bottom_start_2"
            android:textAlignment="center"
            android:textColor="@color/color_second_primary"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textWelcome" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonStart"
            style="@style/StyleButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_44"
            android:layout_marginHorizontal="@dimen/dp_32"
            android:layout_marginVertical="@dimen/dp_24"
            android:text="@string/title_start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textStart2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>