<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="yourGroups"
            type="java.util.List" />

        <variable
            name="homeVM"
            type="com.apion.apionhome.ui.home.HomeViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.community.CommunityFragment">

            <TextView
                android:id="@+id/titleCommunity"
                style="@style/TextHighlight"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_80"
                android:background="@drawable/bg_top"
                android:gravity="center_vertical"
                android:paddingHorizontal="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_16"
                android:text="@string/title_community"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textYourGroup"
                style="@style/TextHighlight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/title_your_group"
                android:textColor="@color/color_tropical_rain"
                android:textSize="@dimen/sp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleCommunity" />

            <include
                android:id="@+id/includeCommunityEmpty"
                layout="@layout/include_group_community"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textYourGroup"
                app:yourGroups="@{yourGroups}" />

            <TextView
                android:id="@+id/titleFeatureCommunity"
                style="@style/TextHighlight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/title_feature_community"
                android:textColor="@color/color_tropical_rain"
                android:textSize="@dimen/sp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/includeCommunityEmpty" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewFeatureCommunity"
                data="@{homeVM.dashBoard.featureCommunity}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_8"
                android:fitsSystemWindows="true"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleFeatureCommunity" />

            <include
                android:id="@+id/includeDeliver"
                layout="@layout/include_deliver"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_1"
                android:layout_marginTop="@dimen/dp_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewFeatureCommunity" />

            <TextView
                android:id="@+id/titleCommunityDiscover"
                style="@style/TextHighlight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/title_community_discover"
                android:textColor="@color/color_tropical_rain"
                android:textSize="@dimen/sp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/includeDeliver" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewCommunity"
                data="@{homeVM.dashBoard.communities}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:layout_marginVertical="@dimen/dp_8"
                android:layout_marginBottom="@dimen/dp_32"
                android:fitsSystemWindows="true"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleCommunityDiscover" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>
