<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout2">

    <data>

        <import type="android.text.InputType" />

        <variable
            name="homeVM"
            type="com.apion.apionhome.ui.home.HomeViewModel" />

        <variable
            name="searchVM"
            type="com.apion.apionhome.ui.search.SearchViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_home_scene">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_tropical_rain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:src="@drawable/img_logo"
                app:layout_constraintBottom_toBottomOf="@+id/deliveryFirst"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/imageButtonSearch"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_marginEnd="@dimen/dp_8"
                android:background="@drawable/ripple"
                android:src="@drawable/ic_search"
                app:layout_constraintEnd_toStartOf="@+id/buttonNotification"
                app:layout_constraintTop_toTopOf="@+id/buttonNotification" />

            <ImageButton
                android:id="@+id/buttonNotification"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_marginEnd="@dimen/dp_16"
                android:background="@drawable/ripple"
                android:src="@drawable/ic_notification"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <include
                android:id="@+id/deliveryFirst"
                layout="@layout/include_deliver"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginTop="@dimen/dp_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonNotification" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/layoutHeader"
            layout="@layout/include_header_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutTop"
            app:searchVM="@{searchVM}" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutHeader">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/imageSlider"
                    dataSlider="@{homeVM.dashBoard.banners}"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_104"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:overScrollMode="never"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    app:layout_constraintBottom_toBottomOf="@+id/imageSlider"
                    app:layout_constraintEnd_toEndOf="@id/imageSlider"
                    app:layout_constraintStart_toStartOf="@+id/imageSlider"
                    app:tabBackground="@drawable/tab_selector"
                    app:tabGravity="center"
                    app:tabIndicatorHeight="0dp"
                    app:tabPaddingEnd="@dimen/dp_8"
                    app:tabPaddingStart="@dimen/dp_8"
                    app:tabSelectedTextColor="@android:color/transparent"
                    app:tabTextColor="@android:color/transparent" />

                <TextView
                    android:id="@+id/titleHighLight"
                    style="@style/TextHighlight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:text="@string/title_highlight"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="@+id/buttonDetailHighlight"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/buttonDetailHighlight" />

                <Button
                    android:id="@+id/buttonDetailHighlight"
                    style="@style/StyleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_40"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:text="@string/title_detail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageSlider" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewFeature"
                    data="@{homeVM.dashBoard.feature}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    android:fitsSystemWindows="true"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buttonDetailHighlight" />

                <TextView
                    android:id="@+id/titleHaNoi"
                    style="@style/TextHighlight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_16"
                    android:text="@string/title_house_hn"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerViewFeature" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewHaNoi"
                    data="@{homeVM.dashBoard.hanoiHouse}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    android:fitsSystemWindows="true"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/titleHaNoi" />

                <TextView
                    android:id="@+id/titleSaiGon"
                    style="@style/TextHighlight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_16"
                    android:text="@string/title_house_hcm"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerViewHaNoi" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewSaiGon"
                    data="@{homeVM.dashBoard.saigonHouse}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    android:fitsSystemWindows="true"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/titleSaiGon" />

                <TextView
                    android:id="@+id/titleUserOnline"
                    style="@style/TextHighlight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_16"
                    android:text="@{@string/title_broker + ` `+homeVM.dashBoard.userOnline.size()+`/`+homeVM.dashBoard.totalUser}"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerViewSaiGon" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/pagerUserOnline"
                    dataSlider="@{homeVM.dashBoard.userOnline}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginBottom="@dimen/dp_32"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:overScrollMode="never"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/titleUserOnline" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>
